--- a/style.css
+++ b/style.css
@@ -1,12 +1,122 @@
 *{
     box-sizing: border-box;
+    margin: 0;
 
 }
-body{
+
+body {
     background-color: azure;
+    display: flex;
+    flex-direction: column;
+    /* เปลี่ยนเป็น column เพื่อให้เนื้อหาจัดเรียงจากบนลงล่าง */
+    height: 100%;
+    margin: 0;
 }
 
 .narbar{
-    display:flex;
-    flex-direction: column;
+    display: flex;
+    flex-direction: row;
+    background-color: aquamarine;
+  
+    font-size: 18px;
+    width: 100%;
+    height: 100px;
+   
+   margin: 5px;
+   padding: 5px;
+z-index: 1000; /*ให้ Navbar อยู่ด้านบนสุด */
+position: fixed;/* ให้ Navbar อยู่คงที่ด้านบน */
+
+   
+   
+}
+.narbar1 {   
+    display: flex;
+    flex-direction: row;
+
+   
+    justify-content: space-evenly;
+  
+    align-items: center;
+    width: 100%;
+    height: 100px;
+    margin: 20px;
+    
+        padding: 25px;
+   
+   
+
+
+}
+.narbar2 {
+    display: flex;
+   
+    flex-direction: row;
+   
+    justify-content: space-evenly;
+    align-items: center;
+ 
+    width: 100%;
+    height: 100px;
+    margin: 5px;
+    padding: 10px;
+    font-size: 16px;
+ 
+
+
+}
+
+button{
+    background-color: azure;
+    border: none;
+    position: relative;
+    z-index: 10;
+
+}
+.transport{
+background-color: azure;
+    border: none;
+    
+    
+}
+   
+
+img {
+    position: relative;
+    z-index: 5;
+}
+
+
+button:hover{
+    color: blue;
+    font-weight: bold;
+}
+
+select{
+    border: none;
+    background-color: azure;
+}
+
+select:hover {
+    color: blue;
+    font-weight: bold;
+}
+
+
+
+#menuSelect{
+    display: none;
+}
+.register{
+    text-decoration: none;
+}
+ .register:hover {
+    color: blue;
+        font-weight: bold;
+ }
+
+.findticket{
+    margin-top: 120px;/* เพิ่มระยะห่างใต้ Navbar ให้เพียงพอ */
+        
+        padding: 20px;
 }
