--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 *{
     box-sizing: border-box;
     margin: 0;
+    
 
 }
 
@@ -9,14 +10,14 @@ body {
     display: flex;
     flex-direction: column;
     /* เปลี่ยนเป็น column เพื่อให้เนื้อหาจัดเรียงจากบนลงล่าง */
-    height: 100%;
+    height:auto;
     margin: 0;
 }
 
 .narbar{
     display: flex;
     flex-direction: row;
-    background-color: aquamarine;
+   
   
     font-size: 18px;
     width: 100%;
@@ -25,7 +26,7 @@ body {
    margin: 5px;
    padding: 5px;
 z-index: 1000; /*ให้ Navbar อยู่ด้านบนสุด */
-position: fixed;/* ให้ Navbar อยู่คงที่ด้านบน */
+
 
    
    
@@ -119,4 +120,193 @@ select:hover {
     margin-top: 120px;/* เพิ่มระยะห่างใต้ Navbar ให้เพียงพอ */
         
         padding: 20px;
+}
+/* !------กดค้นหา รร--------->*/
+
+.narbarfindticket{
+    width: 100%;
+    height: 100%;
+    margin-top: 25px 50px 75px 100px;
+    
+    display: flex;
+    flex-direction: column;
+
+}
+
+.findticket {
+    display: flex;
+    flex-direction: column;
+   width: 900px;
+   height: 700px;
+   
+    align-items: center;
+   
+    border: 1px solid black;
+    border-radius: 10px;
+    margin: 30px auto;
+        /* margin บน-ล่าง และ ซ้าย-ขวา */
+       
+  
+}
+    
+.text {
+    display: inline;
+    margin-bottom: 50px;
+    
+}
+
+.narbarSearch{
+    margin: 5px;
+     padding: 5px;
+     border: 1px solid black;
+
+}
+.narbarSearch span{
+    margin: 3px;
+    padding: 2px;
+    background-color: brown;
+    font-size: 20px;
+           
+        }
+
+.searchdata{
+    display: flex;
+    
+    flex-direction: column;
+    
+    width: 900px;
+    height: fit-content;
+    margin: 10px 30px;
+    padding: 5px;
+   
+   
+    
+}
+
+.group-search{
+    margin: 5px;
+    padding:20px;
+    font-size: 18px;
+    
+    text-align: center;
+}
+
+
+
+.Btnchack{
+    
+    width: 850px;
+        height: 80px;
+        margin: 5px;
+        padding: 5px;
+        border: 1px solid black;
+        text-align:left;
+
+}
+.Btnchack input{
+    text-align: left;
+    border: none;
+}
+
+.group-data{
+    width: 800px;
+    height: 80px;
+    display: flex;
+    flex-direction: row;
+    margin: 20px;
+    padding: 10px;
+    text-align: center;
+    
+   
+}
+
+.group-data button{
+    margin: 5px 2px;
+    padding: 5px;
+    width: 200px;
+    height: 40px;
+    font-size: 16px;
+    border: 1px solid black;
+    border-radius: 15px;
+}
+
+.Btnchackinday{
+    display:flex;
+    flex-direction: row;
+}
+.Btnchackin{
+
+width: 800px;
+    height: 80px;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    margin: 20px;
+    padding: 10px;
+    text-align: center;
+    background-color: white;
+}
+
+.Btnchackin span{
+    display: flex;
+   
+
+    height: 30px;
+    margin: 15px;
+    padding: 5px;
+}
+
+.Btnchackout {
+
+    width: 800px;
+    height: 80px;
+    display: flex;
+    flex-direction: row;
+
+    justify-content: flex-start;
+    margin: 20px;
+    padding: 10px;
+    text-align: center;
+    background-color: white;
+}
+
+.Btnchackout span {
+    display: flex;
+
+
+    height: 30px;
+    margin: 15px;
+    padding: 5px;
+}
+
+#choiceRoom{
+    width: 800px;
+        height: 50px;
+        margin: 15px;
+        padding: 5px;
+        text-align: center;
+        background-color: aliceblue;
+        font-size: 16px;
+        border: 1px solid black;
+
+}
+
+.containersearch{
+    display: flex;
+        justify-content: center;
+    
+        align-items: center;
+        margin-top: 30px;
+
+}
+
+.Btnsearch{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 500px;
+    height: 50px;
+    background-color: aquamarine;
+    border-radius: 10px;
+
 }
